--- a/Lead.html
+++ b/Lead.html
@@ -84,7 +84,8 @@
                                     </tr>
                                 </table>
                                 <h6>Why Partner with Deegeelab to Generate and Nurture Leads</h6>
-                                <p>Today, businesses no longer focus on sending email blasts or setting up mass advertisements to convert leads into customers. At Deegeelab, we believe that it is not enough to capture leads and immediately prompt them to purchase your offers. Some prospects need more time to think about the products or services. Hence, we see to it that we deliver relevant content that can help your customers decide. <br/>We will take care of your current customers whilst gaining more leads for your business using our sales team's tried and tested strategies. We can tie into your overarching sales plan or develop a new strategy with you.</p>
+                                <p class="black-text">Today, businesses no longer focus on sending email blasts or setting up mass advertisements to convert leads into customers. At Deegeelab, we believe that it is not enough to capture leads and immediately prompt them to purchase your offers. Some prospects need more time to think about the products or services. Hence, we see to it that we deliver relevant content that can help your customers decide. </p>
+                                <p class="black-text">We will take care of your current customers whilst gaining more leads for your business using our sales team's tried and tested strategies. We can tie into your overarching sales plan or develop a new strategy with you.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                             </div>
                         </div>
