--- a/backend.html
+++ b/backend.html
@@ -44,7 +44,8 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Customer Support (Back End)</h4>
-                                <p class="black-text">Make your business expansion your focus by letting us handle your back-end customer support needs. We will turn average processes such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours.<br/>Deegeelab understands your pain points. As a business owner like you, we know how repetitive processes like data entry, document filing, and email management can take up a lot of time to finish.</p>
+                                <p class="black-text">Make your business expansion your focus by letting us handle your back-end customer support needs. We will turn average processes such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours.</p>
+                                <p class="black-text">Deegeelab understands your pain points. As a business owner like you, we know how repetitive processes like data entry, document filing, and email management can take up a lot of time to finish.</p>
                                 <h6>Features of Deegeelab Back-end Customer Support</h6>
                                 <table class="black-text paragraph">
                                     <tr>
@@ -96,7 +97,7 @@
                                     </tr>
                                 </table>
                                 <h6>Perks of Working with Deegeelab</h6>
-                                <p>Customers rarely observe what happens behind the scene of a business, but the back-end processes play a significant role in ensuring their satisfaction. At Deegeelab, we manage and improve your back-office support processes, so your clients enjoy a smooth experience when they avail your products or services, request replacements, set-up payment option, access your website or send inquiries through your social media channels.</p>
+                                <p class="black-text">Customers rarely observe what happens behind the scene of a business, but the back-end processes play a significant role in ensuring their satisfaction. At Deegeelab, we manage and improve your back-office support processes, so your clients enjoy a smooth experience when they avail your products or services, request replacements, set-up payment option, access your website or send inquiries through your social media channels.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                             </div>
                         </div>
