--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                             <div class="collapsible-header white-text z-depth-0">Why Deegeelab? </div>
                             <div class="collapsible-body white-text">
                                 <p>
-                                    If time is money then let us bridge this gap for you. Deegeelab is the one-stop shop of SMEs for digital marketing, social media management and customer support for both frontend and backend. Let us work as a team within your business. We have a dedicated account manager working on new strategies and timeline and assisting with the implementation of the daily action plan. <br/>With our unique business growth model and expert ongoing support, our clients can gain a deeper understanding of digital marketing strategies and take advantage of these tools to reach out to their targeted market, attract customers and increase sales.
+                                    If time is money then let us bridge this gap for you. Deegeelab is the one-stop shop of SMEs for digital marketing, social media management and customer support for both frontend and backend. Let us work as a team within your business. We have a dedicated account manager working on new strategies and timeline and assisting with the implementation of the daily action plan.
+                                </p>
+                                <p>
+                                    With our unique business growth model and expert ongoing support, our clients can gain a deeper understanding of digital marketing strategies and take advantage of these tools to reach out to their targeted market, attract customers and increase sales.
                                 </p>
                                 <h6>Deegeelab Benefits</h6>
                                 <table class="white-text paragraph">
@@ -178,7 +181,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td width='1%'><i class="material-icons">map</i></td>
-                                                    <td>Suit 3,Level 27 Governor Macquarrie Tower 1 Farrer Place, Sydney NSW 2000 AUSTRALIA</td>
+                                                    <td>Suite 3, Level 27 Governor Macquarrie Tower 1 Farrer Place, Sydney NSW 2000 Australia</td>
                                                 </tr>
                                                 <tr>
                                                     <td width='1%'><i class="material-icons">map</i></td>
