--- a/marketing.html
+++ b/marketing.html
@@ -44,7 +44,8 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Digital Marketing</h4>
-                                <p class="black-text">Digital marketing is one of the main driving forces of an online business. It is a popular technique used by businesses to build their brand and engage with their target market. To come up with a sound digital marketing strategy, a detailed keyword and competitor research and market analysis are in order.<br/>Additionally, before you can create a digital marketing plan, you must also understand the technical aspects of building a website, writing convincing copies and web content and publishing social media posts.</p>
+                                <p class="black-text">Digital marketing is one of the main driving forces of an online business. It is a popular technique used by businesses to build their brand and engage with their target market. To come up with a sound digital marketing strategy, a detailed keyword and competitor research and market analysis are in order.</p>
+                                <p class="black-text">Additionally, before you can create a digital marketing plan, you must also understand the technical aspects of building a website, writing convincing copies and web content and publishing social media posts.</p>
                                 <h6>Features of Deegeelab Digital Marketing Service</h6>
                                 <table class="black-text paragraph">
                                     <tr>
@@ -96,7 +97,8 @@
                                     </tr>
                                 </table>
                                 <h6>Advantages of Working with Us</h6>
-                                <p>We constantly update the strategy to ensure that it is in tune with the latest trends in the market. In addition, we make sure that every content or campaign published matches the taste of your customers and prospects and meets your standards. Every written, graphic or video content that we publish are carefully crafted by our specialists.<br/>Aside from providing quality content that will boost your site’s ranking, part of our digital marketing services includes maintaining the smooth operation of your sites. Our team can create the design, integrate functionalities, check mobile-responsiveness of pages, test the speed, and more. We also will make sure that the website will stay consistent with your company’s branding.</p>
+                                <p class="black-text">We constantly update the strategy to ensure that it is in tune with the latest trends in the market. In addition, we make sure that every content or campaign published matches the taste of your customers and prospects and meets your standards. Every written, graphic or video content that we publish are carefully crafted by our specialists.</p>
+                                <p class="black-text">Aside from providing quality content that will boost your site’s ranking, part of our digital marketing services includes maintaining the smooth operation of your sites. Our team can create the design, integrate functionalities, check mobile-responsiveness of pages, test the speed, and more. We also will make sure that the website will stay consistent with your company’s branding.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                             </div>
                         </div>
