--- a/social.html
+++ b/social.html
@@ -44,7 +44,8 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Social Media Management</h4>
-                                <p class="black-text">Social media management is a critical part of any online marketing strategy. It allows you to expand your network and put your business on the radar of your prospect market. Millions of consumers spend long hours on their social media accounts. They reach out about their orders and send inquiries through social media. As such, creating and managing an active social media page for your business is a must. <br/>At Deegeelab, we take the time to listen and analyse your social media accounts. We also engage with your followers and communities.</p>
+                                <p class="black-text">Social media management is a critical part of any online marketing strategy. It allows you to expand your network and put your business on the radar of your prospect market. Millions of consumers spend long hours on their social media accounts. They reach out about their orders and send inquiries through social media. As such, creating and managing an active social media page for your business is a must. </p>
+                                <p class="black-text">At Deegeelab, we take the time to listen and analyse your social media accounts. We also engage with your followers and communities.</p>
                                 <h6>Deegeelab Social Media Management Service Inclusive</h6>
                                 <table class="black-text paragraph">
                                     <tr>
@@ -108,7 +109,7 @@
                                     </tr>
                                 </table>
                                 <h6>Advantages of Working with Us</h6>
-                                <p>By choosing Deegeelab, you can get expert advice from our professional and experience social media management team. You can also benefit from cost effective and data-driven social media marketing techniques.</p>
+                                <p class='black-text'>By choosing Deegeelab, you can get expert advice from our professional and experience social media management team. You can also benefit from cost effective and data-driven social media marketing techniques.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                             </div>
                         </div>
