--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                             <div class="determinate"></div>
                         </div>
                     </h4>
-                    <a href="#pillars" class="up-down menu btn-flat btn-floating grey-text darken-4"><i class="mouse"></i></a>
+                    <p class="mouse-holder">
+                        <a href="#pillars" class="up-down menu btn-flat btn-floating grey-text darken-4"><i class="mouse"></i></a>
+                    </p>
                 </div>
             </div>  
             <div class="section pillar-section"><!-- Pillar -->
