--- a/frontend.html
+++ b/frontend.html
@@ -104,7 +104,7 @@
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Customer referral</td>                                
+                                        <td>Gain customer referral</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
@@ -112,7 +112,7 @@
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Helps promote business brand and reputation</td>                                
+                                        <td>Promote excellent business brand and reputation</td>                                
                                     </tr>
                                 </table>
                                 <h6>Why Work with Us</h6>
