--- a/marketing.html
+++ b/marketing.html
@@ -62,7 +62,7 @@
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Optimised Websites for Higher Search Ranking in Google, Bing and Yahoo</td>                                
+                                        <td>Optimised websites for higher search ranking in Google, Bing and Yahoo</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
