--- a/social.html
+++ b/social.html
@@ -109,7 +109,7 @@
                                     </tr>
                                 </table>
                                 <h6>Advantages of Working with Us</h6>
-                                <p class='black-text'>By choosing Deegeelab, you can get expert advice from our professional and experience social media management team. You can also benefit from cost effective and data-driven social media marketing techniques.</p>
+                                <p class='black-text'>By choosing Deegeelab, you can get expert advice from our professional and experienced social media management team. You can also benefit from cost effective and data-driven social media marketing techniques.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                             </div>
                         </div>
