--- a/webdev.html
+++ b/webdev.html
@@ -44,7 +44,7 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Website Development and Management</h4>
-                                <p class="black-text">Today, it is absolutely necessary to have a well coded website as it is one of the best ways to build online presence and connect with the global community. With the help of our specialists, your customers can enjoy accessing a website that meets their demands and satisfies their needs. Furthermore, we will ensure that your websites are regularly maintained and updated to avoid glitches and to upload new content.</p>
+                                <p class="black-text">Today, it is absolutely necessary to have a well-coded website as it is one of the best ways to build online presence and connect with the global community. With the help of our specialists, your customers can enjoy accessing a website that meets their demands and satisfies their needs. Furthermore, we will ensure that your websites are regularly maintained and updated to avoid glitches and to upload new content.</p>
                                 <h6>Features of Websites We Create at Deegeelab</h6>
                                 <table class="black-text paragraph">
                                     <tr>
@@ -88,7 +88,7 @@
                                     </tr>
                                 </table>
                                 <h6>How we do it for you?</h6>
-                                <p class="black-text">Our website development process involves understanding your expectation and goals. Then, we proceed to crafting the design plan of the website according to the specific that you will provide. Once you approve, we will start programming the site and creating and uploading the written and graphic content. Before public viewing, we will audit and test the site’s functionality.Through the course of the service, we will continuously update and test the website for any glitches. We can also add new elements upon your request.</p>
+                                <p class="black-text">Our website development process involves understanding your expectation and goals. Then, we proceed to craft the design plan of the website according to the specific that you will provide. Once you approve, we will start programming the site and creating and uploading the written and graphic content. Before public viewing, we will audit and test the site’s functionality.Through the course of the service, we will continuously update and test the website for any glitches. We can also add new elements upon your request.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                             </div>
                         </div>
