--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='3' cx="5.4" cy="289.4" r="52"/>
-                                <circle class="fill-blue circle-node" data-node='3' cx="5.4" cy="289.4" r="26.2" data-link='webdev.html' data-name='Website Development and Management' data-image='webdev.png' data-desc='Create a creative, mobile-friendly and fully functional website for your business.'/>
+                                <circle class="fill-blue circle-node" data-node='3' cx="5.4" cy="289.4" r="26.2" data-link='webdev.html' data-name='Website Development and Management' data-image='webdev.png' data-desc='Build a creative, mobile-friendly and fully functional website for your business.'/>
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='4' cx="55.1" cy="389.3" r="38"/>
@@ -111,7 +111,7 @@
                             </a>
                             <a class="nodes">
                                 <circle class="fill-blue svg-pulse" data-node='5' cx="15.2" cy="490.5" r="48"/>
-                                <circle class="fill-white circle-node" data-node='5' cx="15.2" cy="490.5" r="24" data-link='frontend.html' data-name='Customer Support Front-End' data-image='frontend.png' data-desc='Handle office admin processes such as data entry and managing accounting applications.'/>
+                                <circle class="fill-white circle-node" data-node='5' cx="15.2" cy="490.5" r="24" data-link='frontend.html' data-name='Customer Support Front-End' data-image='frontend.png' data-desc='Handle office admin processes such as data entry and manage accounting applications.'/>
                             </a>
                         </svg>
                     </div>
