--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <link href="assets/css/svg.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+
+        <!-- <link href="assets/css/pickadate/classic.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/pickadate/classic.date.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/pickadate/classic.time.css" rel="stylesheet" type="text/css" /> -->
     </head>
     <body class="home">
         <div class="loading animated">
@@ -224,11 +228,11 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="input-field col s12 m6 l6">
-                                                        <input id='field_date' type='text' id="field_date" name='field_date' class="datepicker">
+                                                        <input id='field_date' type='date' id="field_date" name='field_date' class="datepicker">
                                                         <label class='left active' for="field_date" class="active">Date</label>
                                                     </div>
                                                     <div class="input-field col s12 m6 l6">
-                                                        <input id='field_time' type='text' class="timepicker" id="field_time" name='field_time'>
+                                                        <input id='field_time' type='time' id="field_time" name='field_time' class="timepicker">
                                                         <label class='left active' for="field_time" class="active">Time</label>
                                                     </div>
                                                 </div>
@@ -243,7 +247,6 @@
                                                         <button class="right btn-round btn-flat waves-effect waves-light white-text">Send</button>
                                                     </div>
                                                 </div>
-                                                <div class="input-field col s12" style="height:50px"></div>
                                             </form>
                                        </div>
                                     </div>
