--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div class="section fp-auto-height footer-section">
                 <div class="left">
                     <ul>
-                        <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
+                        <li style="top: 5px; position: relative;"><img width="60px" src="assets/images/icons/dgwhite.png"></li>
                         <li class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
                     </ul>
                 </div>
