--- a/index.html
+++ b/index.html
@@ -229,13 +229,13 @@
                                                         <label class='left active' for="field_date" class="active">Date</label>
                                                     </div>
                                                     <div class="input-field col s12 m6 l6">
-                                                        <div class="col s5">
+                                                        <div class="col s5 no-padding">
                                                             <select id='field_hour' type='text' id="field_hour" name='field_hour' ></select>
                                                         </div>
-                                                        <div class="col s2">
+                                                        <div class="col s2 no-padding">
                                                             <input type="text" value=":" disabled class="center" />
                                                         </div>
-                                                        <div class="col s5">
+                                                        <div class="col s5 no-padding">
                                                             <select id='field_minute' type='text' id="field_minute" name='field_minute' ></select>
                                                         </div>
                                                         <label class='left active' for="field_hour">Time</label>
