--- a/index.html
+++ b/index.html
@@ -321,9 +321,7 @@
         </aside>
     </body>
     <script src="assets/js/jquery.min.js"></script> 
-
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
+    <script src="assets/js/jquery.ui.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
     <script src="assets/js/scrolloverflow.min.js"></script>
