--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <div class="left">
                     <ul>
                         <li style="top: 5px; position: relative;"><img width="60px" src="assets/images/icons/dgwhite.png"></li>
-                        <!-- <li style="position: relative;"class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li> -->
+                        <li style="position: relative;"class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
                     </ul>
                 </div>
                 <div class="right">
