--- a/frontend.html
+++ b/frontend.html
@@ -127,8 +127,8 @@
         <div class="section fp-auto-height footer-section">
             <div class="left">
                 <ul>
-                    <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
-                    <li class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
+                    <li style="top: -2px; position: relative;"><img width="60px" src="assets/images/icons/dgwhite.png"></li>
+                    <li style="position: relative;"class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
                 </ul>
             </div>
             <div class="right">
