--- a/index.html
+++ b/index.html
@@ -137,25 +137,25 @@
                             <div class="row" id='display_pillar'>
                                 <div data-count='one' class="panel">
                                     <div class="text">
-                                        <h5>Digital Marketing</h5>
+                                        <h5 class="pillar-title">Digital Marketing</h5>
                                         <p><a href="marketing.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
                                 <div data-count='two' class="panel">
                                     <div class="text">
-                                        <h5>Lead Generation</h5>
+                                        <h5 class="pillar-title">Lead Generation</h5>
                                         <p><a href="lead.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
                                 <div data-count='three' class="panel">
                                     <div class="text">
-                                        <h5>Customer Support<br>Back End</h5>
+                                        <h5 class="pillar-title">Customer Support<br>Back End</h5>
                                         <p><a href="backend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
                                 <div data-count='four' class="panel">
                                     <div class="text">
-                                        <h5>Customer Support<br>Front End</h5>
+                                        <h5 class="pillar-title">Customer Support<br>Front End</h5>
                                         <p><a href="frontend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
@@ -336,7 +336,6 @@
     <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/validation/jquery.validate.min.js"></script> 
     <script src="assets/js/validation/additional-methods.min.js"></script> 
-    <script src="assets/js/pillar.js"></script>
     <script src="assets/js/system.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script type="text/javascript">
