--- a/index.html
+++ b/index.html
@@ -136,25 +136,25 @@
                             <!-- mobile -->
                             <div class="row" id='display_pillar'>
                                 <div data-count='one' class="panel">
-                                    <div class="text">
+                                    <div class="text text-middle">
                                         <h5 class="pillar-title">Digital Marketing</h5>
                                         <p><a href="marketing.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
                                 <div data-count='two' class="panel">
-                                    <div class="text">
+                                    <div class="text text-middle">
                                         <h5 class="pillar-title">Lead Generation</h5>
                                         <p><a href="lead.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
                                 <div data-count='three' class="panel">
-                                    <div class="text">
+                                    <div class="text text-middle">
                                         <h5 class="pillar-title">Customer Support<br>Back End</h5>
                                         <p><a href="backend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
                                 </div>
                                 <div data-count='four' class="panel">
-                                    <div class="text">
+                                    <div class="text text-middle">
                                         <h5 class="pillar-title">Customer Support<br>Front End</h5>
                                         <p><a href="frontend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a></p>
                                     </div>
@@ -229,16 +229,16 @@
                                                         <label class='left active' for="field_date" class="active">Date</label>
                                                     </div>
                                                     <div class="input-field col s12 m6 l6">
-                                                        <div class="col s5">
+                                                        <label class='left active' for="field_hour">Time</label>
+                                                        <div class="col s5 no-padding">
                                                             <select id='field_hour' type='text' id="field_hour" name='field_hour' ></select>
                                                         </div>
-                                                        <div class="col s1">
+                                                        <div class="col s1 no-padding">
                                                             <input type="text" value=":" disabled class="center" />
                                                         </div>
-                                                        <div class="col s5">
+                                                        <div class="col s5 no-padding">
                                                             <select id='field_minute' type='text' id="field_minute" name='field_minute' ></select>
                                                         </div>
-                                                        <label class='left active' for="field_hour">Time</label>
                                                     </div>
                                                 </div>
                                                 <div class="row">
@@ -276,7 +276,7 @@
                     <ul class="middle">
                         <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
                         <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
-                        <li class="social-icons">
+                        <li class="social-icons hide-on-small-only">
                             <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/fblogo.png"></a>
                             <a href="https://www.instagram.com/deegeelab/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/iglogo.png"></a>
                             <a href="https://twitter.com/DeegeelabAU" target="_blank"><img class='middle' width="30px" src="assets/images/icons/tlogo.png"></a>
@@ -325,9 +325,9 @@
         </aside>
     </body>
     <script src="assets/js/jquery.min.js"></script> 
-    <script src="assets/js/jquery-ui.js"></script>
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
+    <script src="assets/js/jquery.ui.js"></script>
     <script src="assets/js/scrolloverflow.min.js"></script>
     <script src="assets/js/jquery.fullPage.js"></script> 
     <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
