--- a/frontend.html
+++ b/frontend.html
@@ -139,7 +139,7 @@
                 <ul class="middle">
                     <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
                     <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
-                    <li class="social-icons">
+                    <li class="social-icons hide-on-small-only">
                         <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/fblogo.png"></a>
                         <a href="https://www.instagram.com/deegeelab/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/iglogo.png"></a>
                         <a href="https://twitter.com/DeegeelabAU" target="_blank"><img class='middle' width="30px" src="assets/images/icons/tlogo.png"></a>
