--- a/frontend.html
+++ b/frontend.html
@@ -125,24 +125,33 @@
            </div>
         </div>
         <div class="section fp-auto-height footer-section row">
-            <div class="col left" style="height: 60px;">
+            <div class="col left" style="height:60px;">
                 <ul class="middle">
-                    <li class="middle">
-                        <a class="middle" href="#footer"><img class='middle' width="60px" src="assets/images/icons/dgwhite.png"></a>
+                    <li class="">
+                        <a class="" href="#footer"><img class='middle' width="60px" src="assets/images/icons/dgwhite.png"></a>
                     </li>
                     <li>
                         <a href="#footer" class="grey-text"><i class="material-icons middle" >copyright</i> 2017 Deegeelab</a>
                     </li>
                 </ul>
             </div>
-            <div class="col right" style="height: 60px;">
+            <div class="col right" style="height:60px;">
                 <ul class="middle">
                     <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
                     <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
-                    <li class="social-icons">
+                    <li class="social-icons hide-on-small-only">
                         <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/fblogo.png"></a>
                         <a href="https://www.instagram.com/deegeelab/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/iglogo.png"></a>
                         <a href="https://twitter.com/DeegeelabAU" target="_blank"><img class='middle' width="30px" src="assets/images/icons/tlogo.png"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col show-on-small">
+                <ul class="middle">
+                    <li class="social-icons">
+                        <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/" target="_blank"><img width="30px" src="assets/images/icons/iglogo.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU" target="_blank"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                     </li>
                 </ul>
             </div>
