--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
         <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/responsive-ios.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/animate.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/svg.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+
     </head>
     <body class="home">
         <div class="loading animated">
